# NaplesPU-toolchain

./: .gitignore  Makefile  README  setup.sh
compiler/: CMakeLists.txt  Changelog.txt
compiler/cmake/: config-ix.cmake
compiler/cmake/modules/: AddLLVM.cmake  LLVMExternalProjectUtils.cmake
compiler/include/llvm/: InitializePasses.h  LinkAllPasses.h
compiler/include/llvm/ADT/: Triple.h
compiler/include/llvm/BinaryFormat/: ELF.h
compiler/include/llvm/BinaryFormat/ELFRelocs/: NaplesPU.def
compiler/include/llvm/IR/: Intrinsics.td  IntrinsicsNaplesPU.td
compiler/include/llvm/Object/: ELFObjectFile.h  RelocVisitor.h
compiler/include/llvm/Transforms/: Scalar.h
compiler/lib/MC/: MCObjectFileInfo.cpp
compiler/lib/Object/: ELF.cpp
compiler/lib/ObjectYAML/: ELFYAML.cpp
compiler/lib/Support/: Triple.cpp
compiler/lib/Transforms/Scalar/: CMakeLists.txt  MainCreate.cpp  Scalar.cpp
compiler/tools/clang/include/clang/Basic/: AddressSpaces.h  Attr.td  BuiltinsNaplesPU.def  TargetBuiltins.h
compiler/tools/clang/lib/Basic/: CMakeLists.txt  Targets.cpp
compiler/tools/clang/lib/Basic/Targets/: NaplesPU.cpp  NaplesPU.h
compiler/tools/clang/lib/CodeGen/: BackendUtil.cpp  CGBuiltin.cpp  CodeGenFunction.h
compiler/tools/clang/lib/Driver/: CMakeLists.txt  Driver.cpp
compiler/tools/clang/lib/Driver/ToolChains/: Clang.cpp  CommonArgs.cpp  NaplesPU.cpp  NaplesPU.h
compiler/tools/clang/lib/Sema/: SemaDeclAttr.cpp  SemaType.cpp
compiler/tools/elf2hex/: elf2hex.cpp
compiler/tools/lld/ELF/: CMakeLists.txt  Target.cpp  Target.h  Writer.cpp
compiler/tools/lld/ELF/Arch/: NaplesPU.cpp
compiler/tools/lld/test/: lit.cfg.py
compiler/tools/llvm-readobj/: ELFDumper.cpp
libs/: CMakeLists.txt  Makefile  crt0.s
libs/isr/: CMakeLists.txt  Makefile
libs/isr/include/: isr0.h
libs/isr/src/: isr.c
libs/libc/: CMakeLists.txt  Makefile
libs/libc/include/: ctype.h  limits.h  math.h  misc.h  stddef.h  stdint.h  stdlib.h  string.h
libs/libc/src/: ctype.c  math.c  memcmp.c  memcpy.s  memset.c  stdlib.c  string.c
libs/libcompiler/: CMakeLists.txt  Makefile
libs/libcompiler/src/: divdi3.c  divsi3.c  moddi3.c  modsi3.c  udivdi3.c  udivsi3.c  umoddi3.c  umodsi3.c
libs/startup/: Makefile
libs/startup/src/: crt0.s  vectors.s
misc/: Makefile.npu  NaplesPU.mk
misc/linkerscripts/: alveo.ld  default.ld
